[package]
name = "noggin-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Derive proc-macros for the noggin http header parser"
repository = "https://github.com/plasmaconduit/noggin/"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"
